# easilyclear

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HACKATHON.md  LICENSE  PRD.md  README.md  TASKS.md
backend/: .env.example  .gitignore  config.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: agent_chat.py  index.py  ingest.py  main.py  tests.py
backend/ingestion/: pdf_parser.py  source_whitelist.py  text_cleaner.py  tree_builder.py
backend/ingestion_v2/: __init__.py  _json_utils.py  content_fill.py  dedup.py  embedders.py  emit.py  extract.py  merge.py  multi_agent.py  ocr.py  pdf_downloader.py  pipeline.py  pre_structure.py  text_cleanup.py  title_refiner.py  validation.py
backend/llm/: __init__.py  base.py  factory.py  mock.py  ollama.py  openrouter.py
backend/prompts/: text_cleaner_system.md
backend/prompts_v2/: __init__.py  agent_chat_system.md  content_writer_system.md  critic_system.md  mcq_generator_system.md  mcq_judge_system.md  proposer_system.md  title_refiner_system.md
backend/server/: agent_chat.py  chat.py  ingest.py  tests.py
backend/tests/: test_agent_loop.py  test_agent_scope.py  test_context_mgmt.py  test_dedup.py  test_e2e_journey.py  test_embedders.py  test_ingest_api.py  test_merge.py  test_mock_test_models.py  test_mock_test_orchestrator.py  test_pdf_parser.py  test_source_whitelist.py  test_text_cleaner.py  test_tree_builder.py  test_tutor_chat_api.py  test_tutor_prompt.py  test_tutor_retriever.py  test_tutor_stream.py  test_v2_emit.py  test_v2_json_utils.py  test_v2_ocr.py  test_v2_validator.py  test_vendored_pageindex.py
(+319 files in other folders)
