[project]
name = "gemma-tutor-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
